--- a/firebase/functions/package.json
+++ b/firebase/functions/package.json
@@ -20,7 +20,8 @@
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^3.0.0",
     "stripe": "^7.4.0",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "example_events": "file:example_events"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
